fixed image not covering whole screen on iphone 5 and iphone 6

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,9 @@ html,
 body {
   width: 100%;
   height: 100%;
-  margin: 0px;
-  padding: 0px;
-  overflow-x: hidden;
+  margin: 0;
+  padding: 0;
+  background: url("./assets/background.jpg") no-repeat center center;
+  background-image: url("./assets/background.jpg");
+  background-size: cover;
 }
